refactor: byte로 값을 가져오록 수정